; ModuleID = '/home/carl/AnghaBench/git/extr_string-list.c_string_list_append.c'
source_filename = "/home/carl/AnghaBench/git/extr_string-list.c_string_list_append.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.string_list_item = type { i32 }
%struct.string_list = type { i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.string_list_item* @string_list_append(%struct.string_list* %0, i8* %1) #0 {
  %3 = alloca %struct.string_list*, align 8
  %4 = alloca i8*, align 8
  store %struct.string_list* %0, %struct.string_list** %3, align 8
  store i8* %1, i8** %4, align 8
  %5 = load %struct.string_list*, %struct.string_list** %3, align 8
  %6 = load %struct.string_list*, %struct.string_list** %3, align 8
  %7 = getelementptr inbounds %struct.string_list, %struct.string_list* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %13

10:                                               ; preds = %2
  %11 = load i8*, i8** %4, align 8
  %12 = call i8* @xstrdup(i8* %11)
  br label %15

13:                                               ; preds = %2
  %14 = load i8*, i8** %4, align 8
  br label %15

15:                                               ; preds = %13, %10
  %16 = phi i8* [ %12, %10 ], [ %14, %13 ]
  %17 = call %struct.string_list_item* @string_list_append_nodup(%struct.string_list* %5, i8* %16)
  ret %struct.string_list_item* %17
}

declare dso_local %struct.string_list_item* @string_list_append_nodup(%struct.string_list*, i8*) #1

declare dso_local i8* @xstrdup(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
